--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,18 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "name": "Project ",
+  "short_name": "Project",
+  "theme_color": "black",
+  "background_color": "black",
+  "display": "browser",
+  "scope": "/",
+  "start_url": "/",
+  "icons":[
+    {
+      "src":"maskable.png",
+      "sizes":"512x512",
+      "type":"image/png",
+      "purpose":"any maskable"
+    },
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
@@ -13,13 +24,21 @@
       "sizes": "192x192"
     },
     {
+      "src": "logo256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+
+    },
+    {
+      "src": "logo384.png",
+      "type": "image/png",
+      "sizes": "384x384"
+
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
